--- a/main/resources/application.properties
+++ b/main/resources/application.properties
@@ -1,1 +1,9 @@
+# API configuration
+server.port=8081
 
+# Database configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/concessionary_process
+spring.datasource.username=postgres
+spring.datasource.password=2579
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
