--- a/main/resources/application.properties
+++ b/main/resources/application.properties
@@ -1,8 +1,8 @@
 # API configuration
-server.port=8081
+server.port=8089
 
 # Database configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/concessionary_process
+spring.datasource.url=jdbc:postgresql://localhost:5432/concessionary
 spring.datasource.username=postgres
 spring.datasource.password=2579
 spring.jpa.show-sql=true
